2017-10-09 Loic Valery <lvalery@cern.ch>
    * Adding BinnedLikelihood property to runAsymptotics and runSig

2017-10-05 Michele Pinamonti <michele.pinamonti@gmail.com>
    * README updated (still need to fix / add few things)
    * options added to use separate gammas for some samples and to even correlate gammas across regions (if they come from the same events in data in the case of a data-driven estimation, or in the case of TRF for MC)

2017-10-04 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Four-top style for multi-fit POI
    * Fixes to multi-fit for comparisons
    * Fix to SHAPE systematic (now shoudl finally work fine)
    * Starting to work on option SeparateGammas for individual samples (not yet fully working)
    * Fixes TTHFITTER-157
    
2017-10-02 David Hohn <dhohn@cern.ch
    * custom bin labels for Regions (useful for e.g. for lepton flavours)
	
2017-09-22 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Allow multiple samples to be added with AddSamples, SubtractSamples
    
2017-09-18  David Hohn  <david.hohn@cern.ch>
    * Add Support for drawing sum of prefit bkg on postfit plots

2017-09-14 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing Systematic option ScaleUp/Down, so that one can specify different scaling for each region, and the scaling is re/un-done in the b step
    
2017-09-13 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixes TTHFITTER-152
    
2017-09-07 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed runAsymptoticCLs accoding to TTHFITTER-117
    * Fixed chi2 computation in case of constant norm factors, according to TTHFITTER-153
    
2017-08-16 Michele Pinamonti <michele.pinamonti@gmail.com>
    * MultiFit fFastFitForRanking bug fixed (it was set to true, no way to change it from the multi-fit config)
    
2017-07-26 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing error propagation when dividing samples
    * Fixes TTHFITTER-149